force-app/main/default/objects/C360_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Function</relationshipLabel>
        <relationshipName>Partner_Function</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Relationship External ID</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AG</fullName>
                    <label>Has AG</label>
                </value>
                <value>
                    <fullName>RE</fullName>
                    <label>Has Bill to</label>
                </value>
                <value>
                    <fullName>RG</fullName>
                    <label>Has Payer</label>
                </value>
                <value>
                    <fullName>WE</fullName>
                    <label>Has Ship to Party</label>
                </value>
                <value>
                    <fullName>WE-RE</fullName>
                    <label>Is Ship to Party</label>
                </value>
                <value>
                    <fullName>Has Sold-to</fullName>
                    <isActive>false</isActive>
                    <label>Has Sold-to</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReverseAccountNumber__c</fullName>
        <formula>ReverseAccount__r.AccountNumber__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReverseAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Function (Reverse Account)</relationshipLabel>
        <relationshipName>Partner_Function1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Function</label>
    <nameField>
        <displayFormat>Rel-{0000000}</displayFormat>
        <label>Partner Function Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>